# League-Data-Extractor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
lol_summoner_analyzer/: __init__.py  analyzer.py  cli.py  config.py  display.py
lol_summoner_analyzer/ai/: __init__.py  claude.py  ollama.py
lol_summoner_analyzer/fetchers/: __init__.py  riot.py
